--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -61,99 +61,74 @@
 		</ul>
 	</div>
 
-	<h1><center>Energia Solar</center></h1>
+	<h1 class="h1">Energia Solar</h1>
+	<div class="div1_home">
+		<img id="home_1" src="Imagem\AnimacaoSolar.png" alt="Animação_Solar">
+		</p>
+		<p class="textoHome_1">
+			Energia solar é aquela proveniente do Sol (energia térmica e luminosa).<br>
+			Esta energia é captada por painéis solares, formados por células fotovoltaicas,<br>
+			e transformada em energia elétrica ou mecânica. A energia solar também é utilizada,<br>
+			principalmente em residências, para o aquecimento da água.
+		</p>
+		<button class="botao1">Saiba Mais</button>
+	</div>
 
+	<div class="div2_home">
+		<h1 class="h1">Energia Eólica</h1>
+		<img id="home_2" src="Imagem\AnimacaoEolica.png" alt="Animação_Eolica">
+		<p class="textoHome_2">
+			Energia eólica é aquela gerada pelo vento. Desde a antiguidade este tipo de energia<br>
+			é utilizado pelo homem, principalmente nas embarcações e moinhos. Atualmente,<br>
+			a energia eólica, embora pouco utilizada, é considerada uma importante fonte de energia<br>
+			por se tratar de uma fonte limpa (não gera poluição e não agride o meio ambiente).
+		</p>
+		<button class="botao2">Saiba Mais</button>
+	</div>
+
+	<h1 class="h1">Energia da Biomassa</h1>
 	<div  class="div1_home">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
-		<p class="b1">
-			<b>
-				Definição:
-			</b>
+		<img id="home_3" src="Imagem\AnimacaoBio.png" alt="Animação_Bio">
+		<p class="textoHome_3">
+			Biomassa é o nome dado à massa biológica base da produção de energia a partir da<br>
+			decomposição de resíduos orgânicos. Entre os "combustíveis" que podem ser extraídos<br>
+			deste processo está o gás metano.
 		</p>
-		<p class="a1">
-			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-			é a energia gerada pelo calor proveniente do interior da terra.
-		</p>
+		<button class="botao1">Saiba Mais</button>
 	</div>
 
 
 	<div class="div2_home">
-		<h1 style="margin-left:-60px;"><center>Energia Eólica</center></h1>
-
-		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-		<p class="b1">
-			<b>
-				Usinas Geotérmicas:
-			</b>
+		<h1 class="h1">Energia do Hidrogenio</h1>
+		<img id="home_4" src="Imagem\AnimacaoHidro.png" alt="Animação_Hidro">
+		<p class="textoHome_2">
+			O Hidrogênio é um elemento químico abundante no Universo, embora o hidrogênio elementar<br>
+			seja raro na Terra. Este é produzido a partir de processos industriais, entre eles o uso<br>
+			de hidrocarbonetos. O Hidrogênio é um gás (em estado normal) inodoro, incolor e inflamável.
 		</p>
-		<p class="a1">
-			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-			geradores de turbina, produzindo assim, a eletricidade.
-		</p>
+		<button class="botao2">Saiba Mais</button>
 	</div>
 
-	<h1>Energia da Biomassa</h1>
+	<h1 class="h1">Energia Geotermica</h1>
 	<div  class="div1_home">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
-		<p class="b1">
-			<b>
-				Definição:
-			</b>
+		<img id="home_5" src="Imagem\AnimacaoGeo.png" alt="Animação_Geotermica">
+		<p class="textoHome_1">
+			Energia geotérmica, também conhecida como geotermal, é aquela gerada através do calor<br>
+			proveniente do interior da Terra. Esse calor é transformado, na usina geotérmica, em eletricidade.
 		</p>
-		<p class="a1">
-			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-			é a energia gerada pelo calor proveniente do interior da terra.
-		</p>
+		<button class="botao1">Saiba Mais</button>
 	</div>
 
-	<div class="div2_home">
-		<h1><center>Energia do Hidrogenio</center></h1>
-
-		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-		<p class="b1">
-			<b>
-				Usinas Geotérmicas:
-			</b>
-		</p>
-		<p class="a1">
-			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-			geradores de turbina, produzindo assim, a eletricidade.
-		</p>
-	</div>
-
-	<h1>Energia Geotermica</h1>
-	<div  class="div1_home">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
-		<p class="b1">
-			<b>
-				Definição:
-			</b>
-		</p>
-		<p class="a1">
-			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-			é a energia gerada pelo calor proveniente do interior da terra.
-		</p>
-	</div>
 
 	<div class="trocaCor3">
-		<h1><center>Energia das Ondas</center></h1>
-
-		<!--<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">-->
-		<p class="b1">
-			<b>
-				Usinas Geotérmicas:
-			</b>
+		<h1 class="h1">Energia das Ondas</h1>
+		<img id="home_6" src="Imagem\AnimacaoOndas.png" alt="Animação_Ondas">
+		<p class="textoHome_1">
+			A energia das ondas ou ondomotriz, provém do aproveitamento das ondas oceânicas. A energia<br>
+			das ondas é uma fonte de energia renovável que resulta da transformação da energia contida<br>
+			nas ondas marítimas em energia elétrica.
 		</p>
-		<p class="a1">
-			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
-			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
-			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
-			geradores de turbina, produzindo assim, a eletricidade.
-		</p>
+		<button class="botao1">Saiba Mais</button>
 	</div>
 
 	<footer>
