--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -61,8 +61,21 @@
 		</ul>
 	</div>
 
-	<h1 class="h1">Energia Solar</h1>
+	<h1 class="h1">Energia Renovável</h1>
 	<div class="div1_home">
+		<img id="home_7" src="Imagem\AnimacaoPlaneta.png" alt="Animação_Planeta">
+		<p class="textoHome_1">
+			Energia renovável é a designação dada para as fontes naturais de energia que conseguem<br>
+			se renovar, ou seja, nunca se esgotam pois estão em constante regeneração.<br><br>
+			As fontes de energia renovável poluem pouco ou não chegam a agredir o meio ambiente,<br>
+			pois são consideradas energias limpas, isto é, que são fornecidas pela natureza e sua<br>
+			utilização não contribui para a emissão de gases ou outros materiais tóxicos e nocivos<br>
+			para o ambiente natural. Conheça agora algumas energias que são renováveis.
+		</p>
+	</div>
+
+	<div class="div2_home">
+		<h1 class="titulo1">Solar</h1>
 		<img id="home_1" src="Imagem\AnimacaoSolar.png" alt="Animação_Solar">
 		</p>
 		<p class="textoHome_1">
@@ -71,11 +84,11 @@
 			e transformada em energia elétrica ou mecânica. A energia solar também é utilizada,<br>
 			principalmente em residências, para o aquecimento da água.
 		</p>
-		<button class="botao1">Saiba Mais</button>
+		<a href="Solar.html" class="botao2">Saiba Mais</a>
 	</div>
 
-	<div class="div2_home">
-		<h1 class="h1">Energia Eólica</h1>
+	<div class="div3_home">
+		<h1 class="h1">Eólica</h1>
 		<img id="home_2" src="Imagem\AnimacaoEolica.png" alt="Animação_Eolica">
 		<p class="textoHome_2">
 			Energia eólica é aquela gerada pelo vento. Desde a antiguidade este tipo de energia<br>
@@ -83,52 +96,52 @@
 			a energia eólica, embora pouco utilizada, é considerada uma importante fonte de energia<br>
 			por se tratar de uma fonte limpa (não gera poluição e não agride o meio ambiente).
 		</p>
-		<button class="botao2">Saiba Mais</button>
+		<a href="Eolica.html" class="botao1">Saiba Mais</a>
 	</div>
 
-	<h1 class="h1">Energia da Biomassa</h1>
+	<h1 class="h1">Biomassa</h1>
 	<div  class="div1_home">
 		<img id="home_3" src="Imagem\AnimacaoBio.png" alt="Animação_Bio">
-		<p class="textoHome_3">
+		<p class="textoHome_1">
 			Biomassa é o nome dado à massa biológica base da produção de energia a partir da<br>
 			decomposição de resíduos orgânicos. Entre os "combustíveis" que podem ser extraídos<br>
 			deste processo está o gás metano.
 		</p>
-		<button class="botao1">Saiba Mais</button>
+		<a href="Biomassa.html" class="botao1">Saiba Mais</a>
 	</div>
 
 
 	<div class="div2_home">
-		<h1 class="h1">Energia do Hidrogenio</h1>
+		<h1 class="titulo2">Hidrogenio</h1>
 		<img id="home_4" src="Imagem\AnimacaoHidro.png" alt="Animação_Hidro">
 		<p class="textoHome_2">
 			O Hidrogênio é um elemento químico abundante no Universo, embora o hidrogênio elementar<br>
 			seja raro na Terra. Este é produzido a partir de processos industriais, entre eles o uso<br>
 			de hidrocarbonetos. O Hidrogênio é um gás (em estado normal) inodoro, incolor e inflamável.
 		</p>
-		<button class="botao2">Saiba Mais</button>
+		<a href="hidrogenio.html" class="botao2">Saiba Mais</a>
 	</div>
 
-	<h1 class="h1">Energia Geotermica</h1>
+	<h1 class="h1">Geotérmica</h1>
 	<div  class="div1_home">
 		<img id="home_5" src="Imagem\AnimacaoGeo.png" alt="Animação_Geotermica">
 		<p class="textoHome_1">
 			Energia geotérmica, também conhecida como geotermal, é aquela gerada através do calor<br>
 			proveniente do interior da Terra. Esse calor é transformado, na usina geotérmica, em eletricidade.
 		</p>
-		<button class="botao1">Saiba Mais</button>
+		<a href="Geotermica.html" class="botao1">Saiba Mais</a>
 	</div>
 
 
-	<div class="trocaCor3">
-		<h1 class="h1">Energia das Ondas</h1>
+	<div class="div3_home">
+		<h1 class="h1">Ondas</h1>
 		<img id="home_6" src="Imagem\AnimacaoOndas.png" alt="Animação_Ondas">
 		<p class="textoHome_1">
 			A energia das ondas ou ondomotriz, provém do aproveitamento das ondas oceânicas. A energia<br>
 			das ondas é uma fonte de energia renovável que resulta da transformação da energia contida<br>
 			nas ondas marítimas em energia elétrica.
 		</p>
-		<button class="botao1">Saiba Mais</button>
+		<a href="Ondas.html" class="botao1">Saiba Mais</a>
 	</div>
 
 	<footer>
