--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -49,10 +49,10 @@
 			<ul>
 				<li><a href="Home.html">HOME</a></li>
 				<li><a href="Solar.html">SOLAR</a></li>
-				<li><a href="Eolica.html">EOLICA</a></li>
+				<li><a href="Eolica.html">EÓLICA</a></li>
 				<li><a href="Biomassa.html">BIOMASSA</a></li>
 				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
-				<li><a href="Geotermica.html">GEOTERMICA</a></li>
+				<li><a href="Geotermica.html">GEOTÉRMICA</a></li>
 				<li><a class="active" href="Ondas.html">ONDAS</a></li>
 				<li><a href="Formulario.html">FORMULÁRIO</a></li>
 				<li><a href="app.html">APP</a></li>
