--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -48,12 +48,12 @@
 			<ul>
 				<li><a href="Home.html">HOME</a></li>
 				<li><a class="active" href="Solar.html">SOLAR</a></li>
-				<li><a href="Eolica.html">EOLICA</a></li>
+				<li><a href="Eolica.html">EÓLICA</a></li>
 				<li><a href="Biomassa.html">BIOMASSA</a></li>
 				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
-				<li><a href="Geotermica.html">GEOTERMICA</a></li>
+				<li><a href="Geotermica.html">GEOTÉRMICA</a></li>
 				<li><a href="Ondas.html">ONDAS</a></li>
-				<li><a href="Formulario.html">FORMULARIO</a></li>
+				<li><a href="Formulario.html">FORMULÁRIO</a></li>
 				<li><a href="app.html">APP</a></li>
 			</ul>
 		</div>
