--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -48,18 +48,18 @@
         <ul>
   				<li><a href="Home.html">HOME</a></li>
   				<li><a href="Solar.html">SOLAR</a></li>
-  				<li><a href="Eolica.html">EOLICA</a></li>
+  				<li><a href="Eolica.html">EÓLICA</a></li>
   				<li><a href="Biomassa.html">BIOMASSA</a></li>
   				<li><a href="Hidrogenio.html">HIDROGÊNIO</a></li>
-  				<li><a href="Geotermica.html">GEOTERMICA</a></li>
+  				<li><a href="Geotermica.html">GEOTÉRMICA</a></li>
   				<li><a href="Ondas.html">ONDAS</a></li>
-  				<li><a href="Formulario.html">FORMULARIO</a></li>
+  				<li><a href="Formulario.html">FORMULÁRIO</a></li>
   				<li><a class="active" href="app.html">APP</a></li>
   			</ul>
   		</div>
   		<!-- Divisão em Branco - topo app-->
 
-  <div class="fundo">
+  <div class="fundo" style="margin-bottom:-22px;">
     <div class="appIntroducao">
       <h1 class="titulo"><center>Brain Energy</center></h1>
 
